# G-conda

./: README.md  pyproject.toml  setup.py
gconda/: gconda.py
