[tool.poetry]
name = "gconda"
version = "0.1.1"
description = "A library to manage environment on Google Colab and Kaggle."
authors = ["Hoang-Phat Vu <phatvucoder@gmail.com>"]
readme = "README.md"
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.6"
condacolab = "*"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
